# New-repo

./: CBnotes  README.md  TPTnotes.md  dbhack.py  keypad.py  lcm.py  main.py  palindrome.py  pyproject.toml  pythonmenu.py  replit.md  task.md
_includes/: navigation.html
rep/week0/: factorial.py  factors.py  npattern.py  pattern.py  pyramid.py  tree.py
rep/week1/: dog.py  uber.py
rep/week2/: palindrome.py
replit/: boat.py  dbhack.py  fibonacci.py  matrix.py  swap.py
