[tool.poetry]
name = "repl_python3_beta_New-repo"
version = "0.1.0"
description = ""
authors = ["LittleRed <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
replit = "^3.2.4"
palindrome = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
